添加common和spring模块内容

--- a/javaWeb/pom.xml
+++ b/javaWeb/pom.xml
@@ -12,6 +12,8 @@
         <module>demo-common</module>
         <module>demo-struts</module>
         <module>demo-servlet</module>
+        <module>demo-ssm</module>
+        <module>demo-spring</module>
     </modules>
 
     <name>demo Maven Webapp</name>
