common 添加图片裁剪 待修改

--- a/javaWeb/demo-common/src/main/webapp/WEB-INF/web.xml
+++ b/javaWeb/demo-common/src/main/webapp/WEB-INF/web.xml
@@ -38,4 +38,34 @@
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
+  <!--使静态文件也能被拦截-->
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.css</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.gif</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.jpg</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.js</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.png</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.bmp</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.jpge</url-pattern>
+  </servlet-mapping>
+
 </web-app>
