--- a/javaWeb/pom.xml
+++ b/javaWeb/pom.xml
@@ -23,7 +23,7 @@
         <mybatis.version>3.2.8</mybatis.version>
         <mybatis-spring.version>1.2.1</mybatis-spring.version>
         <mybatis-ehcache.version>1.0.2</mybatis-ehcache.version>
-        <mysql-connector.version>5.0.5</mysql-connector.version>
+        <mysql-connector.version>5.1.39</mysql-connector.version>
         <druid.version>1.0.4</druid.version>
         <spring.version>4.3.1.RELEASE</spring.version>
         <log4j.version>1.2.17</log4j.version>
@@ -156,6 +156,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.6.4</version>
         </dependency>
         <!-- Log Dependencies end -->
 
