--- a/javaWeb/demo-common/src/main/webapp/WEB-INF/web.xml
+++ b/javaWeb/demo-common/src/main/webapp/WEB-INF/web.xml
@@ -29,13 +29,13 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:config/springmvc.xml</param-value>
+      <param-value>classpath:config/spring-mvc.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
     <servlet-name>springMVC</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
 
   <!--使静态文件也能被拦截-->
