--- a/javaWeb/demo-common/src/main/webapp/WEB-INF/web.xml
+++ b/javaWeb/demo-common/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:config/spring/springConfig-*.xml</param-value>
+  </context-param>
   <!-- 配置Spring字符编码过滤器 -->
   <filter>
     <filter-name>encodingFilter</filter-name>
