--- a/javaWeb/demo-hibernate/src/main/webapp/WEB-INF/web.xml
+++ b/javaWeb/demo-hibernate/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,16 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <display-name>Archetype Created Web Application</display-name>
+    <servlet>
+        <servlet-name>StudentServlet</servlet-name>
+        <servlet-class>cn.youye.hibernate.test1.servlet.StudentServlet
+        </servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>StudentServlet</servlet-name>
+        <url-pattern>/studentServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
