hibernate 简单web完善 servlet 删改 添加truts1.x

--- a/javaWeb/pom.xml
+++ b/javaWeb/pom.xml
@@ -14,6 +14,7 @@
         <module>demo-servlet</module>
         <module>demo-ssm</module>
         <module>demo-spring</module>
+        <module>demo-struts1.x</module>
     </modules>
 
     <name>demo Maven Webapp</name>
