--- a/javaWeb/demo-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/javaWeb/demo-servlet/src/main/webapp/WEB-INF/web.xml
@@ -6,10 +6,6 @@
     <display-name>Archetype Created Web Application</display-name>
 
     <servlet>
-        <servlet-name>loginServlet</servlet-name>
-        <servlet-class>cn.youye.se.servlet.LoginServlet</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>ProgressUploadServlet</servlet-name>
         <servlet-class>cn.youye.uploadTest.ProgressUploadServlet</servlet-class>
     </servlet>
@@ -17,6 +13,14 @@
         <servlet-name>topage</servlet-name>
         <servlet-class>cn.youye.Topage</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>uploadFileServlet</servlet-name>
+        <servlet-class>cn.youye.uploadFile.UploadFileServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>uploadFileServlet</servlet-name>
+        <url-pattern>/uploadFileServlet</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>topage</servlet-name>
         <url-pattern>/toPage</url-pattern>
@@ -24,9 +28,5 @@
     <servlet-mapping>
         <servlet-name>ProgressUploadServlet</servlet-name>
         <url-pattern>/progressServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>loginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
     </servlet-mapping>
 </web-app>
